# ReportFlow

./: .env.example  .gitignore  DESIGN.md  PRODUCT.md  README.md  docker-compose.yml
.impeccable/: design.json
.impeccable/critique/: 20260611T154236__frontend-src-pages-admindashboard-tsx.md
backend/: alembic.ini  pyproject.toml  requirements.txt  seed.sh
backend/alembic/versions/: 3caa8d2db7c6_add_approver_id_to_reports.py
backend/app/: config.py  main.py
backend/app/api/: audit.py  auth.py  comments.py  notifications.py  reports.py  reviews.py  uploads.py  users.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/kafka/: producer.py
backend/app/kafka/consumers/: notification_consumer.py
backend/app/models/: __init__.py  notification.py  report.py  report_audit_log.py  report_comment.py  report_version.py  user.py
backend/app/scheduler/: jobs.py
backend/app/schemas/: auth.py  comment.py  report.py
backend/app/seed/: seed_users.py
backend/app/services/: auth_service.py  comment_service.py  notification_service.py  report_service.py  review_service.py  storage_service.py  upload_service.py
backend/scripts/: e2e_test.py  migrate_to_minio.py  test_minio.py
design/: DESIGN.md  admin-page.html  approver-page.html  depositor-page.html  login-page.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
scripts/: create_kafka_topics.ps1  create_kafka_topics.sh
specs/: BRANCHES.md  ERD.md  EXPLAIN.md  MINIO_MIGRATION.md  PLAN.md  PRD.md  SAD.md  USER_STORIES.md
(+20 files in other folders)
